[package]
name = "zordon"
version = "0.1.0"
authors = ["Orson Mosley <orson.mosley@6point6.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_hex = "0.2.2"
byteorder = "1.4.2"
mut_view = { path = "mut_view"}