[package]
name = "zordon"
version = "0.1.9"
authors = ["Orson Mosley <orson.mosley@6point6.co.uk>"]
edition = "2018"
description = "Simple low-level abstractions for zero-copy parsing and mutation"
readme = "README.md"
repository = "https://github.com/Aetiology/zordon"
license-file = "LICENSE"
keywords = ["zero-copy", "parsing"]
categories = ["data-structures", "parsing"]

[dependencies]
assert_hex = "0.2.2"
byteorder = "1.4.2"
mutview = "0.1.0"